--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.21.0",
     "clsx": "^1.2.1",
     "solid-js": "^1.6.10"
   }
