--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
     "@supabase/supabase-js": "^2.21.0",
     "clsx": "^1.2.1",
     "solid-js": "^1.6.10"
